examples/errors/parsing/pat-lparen-bad-content.cn
fun f : Int -> Int [pure] = {
  ( -> 0
}

main : () [impure] = ()
